# rust-postgres-array

./: .gitignore  .travis.yml  Cargo.toml  README.md  circle.yml
doc/: search-index.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/postgres_array/: trait.Array.js
doc/postgres_array/: index.html  sidebar-items.js  stability.html  stability.json  struct.ArrayBase.html  struct.ArraySlice.html  struct.DimensionInfo.html  struct.MutArraySlice.html  trait.Array.html  trait.MutableArray.html
doc/src/postgres_array/: lib.rs.html
doc/v0.5.0/: search-index.js
doc/v0.5.0/postgres_array/: index.html  stability.html  stability.json  struct.Array.html  struct.Dimension.html
doc/v0.5.1/: search-index.js
doc/v0.5.1/postgres_array/: index.html  struct.Array.html  struct.Dimension.html
doc/v0.5.2/: search-index.js
doc/v0.5.2/postgres_array/: index.html  sidebar-items.js  struct.Array.html  struct.Dimension.html
doc/v0.6.0/postgres_array/: struct.Array.html  struct.Dimension.html
doc/v0.6.1/: search-index.js
doc/v0.6.1/postgres_array/: index.html  struct.Array.html  struct.Dimension.html
doc/v0.6.2/: search-index.js
doc/v0.6.2/postgres_array/: index.html  struct.Array.html  struct.Dimension.html
doc/v0.7.0/postgres_array/: struct.Array.html  struct.Dimension.html
doc/v0.7.1/: search-index.js
doc/v0.7.1/postgres_array/: index.html  struct.Array.html
src/: array.rs  base.rs  impls.rs  lib.rs
src/impls/: mod.rs  uuid.rs
(+134 files in other folders)
