[package]
name = "postgres_array"
version = "0.9.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "Array support for rust-postgres"
repository = "https://github.com/sfackler/rust-postgres-array"
documentation = "https://docs.rs/postgres_array/0.9.0/postgres_array"

[dependencies]
fallible-iterator = "0.1"
postgres-shared = "0.4"
postgres-protocol = "0.3"

[dev-dependencies]
postgres = "0.15"
