[package]
name = "postgres_array"
version = "0.10.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Array support for rust-postgres"
repository = "https://github.com/sfackler/rust-postgres-array"

[dependencies]
bytes = "1.0"
fallible-iterator = "0.2"
postgres-types = "0.2"
postgres-protocol = "0.6"

[dev-dependencies]
postgres = "0.19"
